--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
             <version>5.9.0</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
@@ -30,21 +31,38 @@
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.8</version>
+                <configuration>
+                    <excludes>
+                        <exclude>BookOnlineTest.class</exclude>
+                        <exclude>BookPDFTest.class</exclude>
+                        <exclude>CientificOnlineTest.class</exclude>
+                        <exclude>CientificPDFTest.class</exclude>
+                        <exclude>MagazineOnlineTest.class</exclude>
+                        <exclude>MagazinePDFTest.class</exclude>
+                        <exclude>ThesisOnlineTest.class</exclude>
+                        <exclude>ThesisPDFTest.class</exclude>
+                    </excludes>
+                </configuration>
                 <executions>
                     <execution>
+                        <id>default-prepare-agent</id>
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
                     </execution>
-                    <!-- attached to Maven test phase -->
                     <execution>
-                        <id>report</id>
+                        <id>jacoco-report</id>
                         <phase>test</phase>
                         <goals>
                             <goal>report</goal>
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.0</version>
             </plugin>
         </plugins>
     </build>
